--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.5.0
+dj-database-url==0.5.0
 Django==3.0.14
 django-binary-database-files==1.0.10
 gunicorn==20.1.0
+psycopg2==2.9.3
+python-decouple==3.6
 pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
